2004-08-05  Shane Landrum <epicene@pobox.com>

	* en/Gtk/Rc*: Filled in all "to be added" for RC-file
	subsystem.
	* en/Gtk/Accel*: Added docs about accelerator keys.

2004-08-04  Shane Landrum <epicene@pobox.com>

	* en/Gtk/*: docs for many tree-related methods,
	assorted others.

2004-08-01  Shane Landrum <epicene@pobox.com>

	* en/Pango/*: Filled in all "To be added"; cleaned
	up existing docs and made them more consistent.
	
2004-07-27  John Luke  <john.luke@gmail.com>

	some GLib and Atk docs

2004-07-21  John Luke  <jluke@cfl.rr.com>

	* en/Gtk/TextView.xml:
	* en/Gtk/TextIter.xml: documented the rest

2004-07-16  John Luke  <jluke@cfl.rr.com>

	* en/Pango/*: doc'ed some more pango stuff

2004-07-11  John Luke  <jluke@cfl.rr.com>

	* en/Vte*: some Vte docs
	* en/Pango/Context.xml: doc'ed

2004-07-07  Jasper Van Putten <jaspervp@gmx.net>

	* en/Gtk/*.xml : docs for Notebook and RadioButton.

2004-07-06  Peter Johanson <latexer@gentoo.org>

	* en/Gnome/*.xml : docs for ColorPicker.

2004-07-02  Mike Kestner  <mkestner@ximian.com>

	* en/GLib/*.xml : more glib docs.

2004-07-02  Mike Kestner  <mkestner@ximian.com>

	* en/GLib/*.xml : docs for Boxed, ConnectBeforeAttribute, and 
	DefaultSignalHandlerAttribute.

2004-07-02  Peter Johanson <latexer@gentoo.org>

	* en/Art/*.xml : docs for some Art API.

2004-06-29  Mike Kestner  <mkestner@ximian.com>

	* en/Gdk/Key.xml : script fill summary tags.  There isn't a lot of
	valuable information to be added here, so we're just using the member
	name + " key value" for the summary.

2004-06-29  Mike Kestner  <mkestner@ximian.com>

	* en/*/*.xml : remove To be added from enum <remarks> since they aren't
	rendered.  Monodoc needs to be enhanced to render if they are there,
	but we should normally put enum member docs in the summary, not remarks.

2004-06-24  Mike Kestner  <mkestner@ximian.com>

	* en/Gtk/Global.xml : finish.  there's a lot of crap in there.