@@ -235,7 +235,7 @@
         <Parameter Name="find_func" Type="Gtk.AccelGroupFindFunc" />
       </Parameters>
       <Docs>
-        <summary>Finds the first entry in an accelerator group for which <paramref name="find_func" /> returns TRUE and returns its <see cref="T:GtkAccelKey">.</summary>
+        <summary>Finds the first entry in an accelerator group for which <paramref name="find_func" /> returns TRUE and returns its <see cref="T:Gtk.AccelKey" />.</summary>
         <param name="find_func">a <see cref="T:Gtk.AccelGroupFindFunc" /> for filtering the AccelGroup entries</param>
         <returns>a <see cref="T:Gtk.AccelKey" />, the first key matching the find function. It is owned by Gtk# and must not be freed.</returns>
         <remarks />
