@@ -69,7 +69,7 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>A <see cref="T:GLib.GQuark"> containing an integer/string mapping for the path to accelerate.</summary>
+        <summary>A <see cref="T:GLib.GQuark" /> containing an integer/string mapping for the path to accelerate.</summary>
         <remarks>See the notes for <see cref="T:Gtk.Accel.MapAddEntry()" /> for details on the formatting of the path string.</remarks>
       </Docs>
     </Member>
