@@ -98,7 +98,7 @@
       <Docs>
         <summary>To be added</summary>
         <param name="key">a <see cref="T:System.Int32" /> enumerated in <see cref='T:Gdk.Key' /></param>
-        <param name="mods">a <see cref="T:System.Int32" /> enumerated in <see cref='T:Gdk.ModifierType' />, the modifiers (shift, ctrl, etc) that apply for this AccelKey</param></param>
+        <param name="mods">a <see cref="T:System.Int32" /> enumerated in <see cref='T:Gdk.ModifierType' />, the modifiers (shift, ctrl, etc) that apply for this AccelKey</param>
         <param name="flags">a <see cref="T:System.Int32" /> enumerated in <see cref='T:Gdk.AccelFlags' /> for whether this AccelKey should be displayed in the menu</param>
         <returns>a <see cref="T:Gtk.AccelKey" /></returns>
         <remarks />
