@@ -62,7 +62,7 @@
     </Member>
     <Member MemberName="PropertyName">
       <MemberSignature Language="C#" Value="public int PropertyName;" />
-      <MemberType>Field</MemberType
+      <MemberType>Field</MemberType>
       <ReturnValue>
         <ReturnType>System.Int32</ReturnType>
       </ReturnValue>
