@@ -33,8 +33,8 @@
       </Parameters>
       <Docs>
         <summary>Asks the <see cref="M:Gtk.TreeDragSource" /> to fill in <paramref name="selection_data" /> with a representation of the row at <paramref name="path" />.  Should robustly handle a path no longer found in the model.</summary>
-        <param name="path">a <see cref="M:Gtk.TreePath"></param>
-        <param name="selection_data">a <see cref="M:Gtk.SelectionData"> object to fill with data</param>
+        <param name="path">a <see cref="M:Gtk.TreePath" /></param>
+        <param name="selection_data">a <see cref="M:Gtk.SelectionData" /> object to fill with data</param>
         <returns>A boolean; true if data of the required type was provided.</returns>
         <remarks>FIXME: the original doc says, "selection_data->target gives the required type of the data.", but there doesn't seem to be a parallel in Gtk#. Check this.</remarks>
       </Docs>
@@ -50,7 +50,7 @@
       </Parameters>
       <Docs>
         <summary>Check whether the row at <paramref name="path" /> is draggable. If the source doesn't implement this method, the row is assumed to be draggable.</summary>
-        <param name="path">a <see cref="M:Gtk.TreePath"></param>
+        <param name="path">a <see cref="M:Gtk.TreePath" /></param>
         <returns>A boolean, true if this row can be dragged.</returns>
         <remarks />
       </Docs>
@@ -68,7 +68,7 @@
         <summary>
 	  Asks the TreeDragSource to delete the row at path, because it was moved somewhere else via drag-and-drop. Returns FALSE if the deletion fails because path no longer exists, or for some model-specific reason. Should robustly handle a path no longer found in the model.
 </summary>
-        <param name="path">a <see cref="M:Gtk.TreePath"> to delete</param>
+        <param name="path">a <see cref="M:Gtk.TreePath" /> to delete</param>
         <returns>A boolean for whether the deletion succeeded.</returns>
         <remarks />
       </Docs>
