@@ -1,3 +1,11 @@
+2004-08-08  Hector E. Gomez Morales  <hectorgm@ciencias.unam.mx>
+
+	* en/Gtk/AccelGroup.xml
+	* en/Gtk/AccelGroupEntry.xml
+	* en/Gtk/AccelKey.xml
+	* en/Gtk/RcProperty.xml
+	* en/Gtk/TreeDragSource.xml: Fixed errors in tags, make assemble now works.
+	
 2004-08-05  Shane Landrum <epicene@pobox.com>
 
 	* en/Gtk/Rc*: Filled in all "to be added" for RC-file
